Changes in 1.7

 - Add MaterialViewer example.

 - Checkbox uses now disabled text color when disabled.

 - Changed colors for window-title caption to keep them readable when not active.

 - Draw sub-menus to left side if they would be outside main-window otherwise.

 - Give ListBox better defaults for the ScrollBar stepsizes.

 - Double and triple click events now for each mouse-button. Old events for that got removed.

 - Fix adding archives twice, which caused multiple archives of the same name and type covering each other. This one required a texture name change from using backslashes to slahes under Windows.

 - Give access to texture mipmaps. You can provide custom mipmap textures upon generation, regeneration, and locking.
   Make sure the provided data is large enough and covers all miplevels. Also the returned pointer (from lock) will only cover the smaller data of the mipmap level dimension chosen (level 0 is the original texture).

 - Separate TextureWrap mode into U and V fields

 - Add mirror texture wrap modes
 
 - windows show now active/inactive state

 - remove unneed drop/grab calls found by manik_sheeri

 - fix rounding problem in IGUIElements which have EGUIA_SCALE alignments.

 - MessageBox supports now automatic resizing and images.
   Deprecated EGDS_MESSAGE_BOX_WIDTH and EGDS_MESSAGE_BOX_HEIGHT

 - Let maya-cam animator react on a setTarget call to the camera which happened outside it's own control

 - New contextmenue features:
	automatic checking for checked flag.
	close handling now customizable
	serialization can handle incomplete xml's
	setEventParent now in public interface
	New function findItemWithCommandId
  	New function insertItem

 - irrArray: Fixed issues with push_front and reallocation
   Changed behavior for set_pointer and clear, when free_when_destroyed is false

 - NPK (Nebula device archive) reader added, it's an uncompressed PAK-like format

 - SSkinMeshBuffer::MoveTo* methods renamed to convertTo*
