@@ -52,6 +52,7 @@ int main(int argumentCount, char * arguments[])
 
 	TEST(disambiguateTextures); // Normally you should run this first, since it validates the working directory.
 	// Now the simple tests without device
+	TEST(testArray);
 	TEST(exports);
 	TEST(irrCoreEquals);
 	TEST(testIrrString);
